# millenium-falcon-challenge

./: .env  .gitignore  Dockerfile.backend  README.md  docker-compose.yaml  pyproject.toml  requirements.in  requirements.txt  wsgi.py
app/: __init__.py  config.py
app/millenium_router/: core.py  routes.py
backend/: .dockerignore  Dockerfile.backend  __init__.py  app.py  cli.py  config.py  pyproject.toml  requirements.in  requirements.txt  wsgi.py
backend/millenium_router/: core.py  loaders.py  models.py
backend/src/: app.py  cli.py  config.py  log_tools.py  wsgi.py
backend/src/millenium_router/: core.py  loaders.py  models.py
backend/tests/: conftest.py  test_core.py
frontend/: .dockerignore  Dockerfile.frontend  angular.json  docker-entrypoint.sh  nginx.conf  package-lock.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.html  app.scss  app.ts  data.service.ts
frontend/src/app/file-upload/: file-upload.html  file-upload.scss  file-upload.ts
frontend/src/environments/: environment.prod.ts  environment.ts
millenium_router/: core.py  models.py
tests/: conftest.py  test_core.py
