[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.__pycache__
  | \.env
  | \.pytest_cache
  | \.venv
  | examples
  | frontend
)/
'''

[tool.setuptools]
package-dir = {"" = "."} 
packages = ["backend"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mon-cli"
version = "1.0.0"
dependencies = [
    "typer",
]

[project.scripts]
"give-me-odds" = "backend.cli:cli_entry_point"